--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         <activity
             android:name=".HappyBirthActivity"
             android:exported="true" >
+
+        </activity>
+
+        <activity
+            android:name=".RollingDiceActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
