--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
 
         <activity
             android:name=".TipCalculatorActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.TipsCalculator"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
