--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // allows to use vector drawables in API < 21 without generating PNGs
+        vectorDrawables.useSupportLibrary = true
+
     }
 
     buildTypes {
@@ -30,6 +34,8 @@ android {
         jvmTarget = '13'
     }
 
+
+    // allows to use xmlLayoutNameBinding
     buildFeatures {
         viewBinding = true
     }
