--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gamesofni.kotlinTutorials" >
+    package="com.gamesofni.kotlinTutorials">
 
     <application
         android:allowBackup="true"
@@ -27,14 +27,17 @@
         <activity
             android:name=".TipCalculatorActivity"
             android:exported="true"
-            android:theme="@style/Theme.TipsCalculator"
-            >
+            android:theme="@style/Theme.TipsCalculator">
+        </activity>
+
+        <activity
+            android:name=".affirmations.AffirmationsActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
