--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,19 @@
         <activity
             android:name=".affirmations.AffirmationsActivity"
             android:exported="true" >
+        </activity>
+
+        <activity
+            android:name=".wordsapp.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".wordsapp.DetailActivity"
+            android:parentActivityName=".wordsapp.MainActivity" />
     </application>
 
 </manifest>
