--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,14 +38,19 @@
         <activity
             android:name=".wordsapp.MainActivity"
             android:exported="true" >
+        </activity>
+        <activity
+            android:name=".wordsapp.DetailActivity"
+            android:parentActivityName=".wordsapp.MainActivity"
+        />
+
+
+        <activity android:name=".DessertClickerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".wordsapp.DetailActivity"
-            android:parentActivityName=".wordsapp.MainActivity" />
     </application>
 
 </manifest>
