--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,17 @@
         <activity
             android:name=".wordsapp.MainActivity"
             android:exported="true" >
+        </activity>
+
+        <activity android:name=".DessertClickerActivity">
+        </activity>
+
+        <activity android:name=".unscramble.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".DessertClickerActivity">
         </activity>
     </application>
 
