U4P2 - Mars Photos App - starter code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,11 +53,20 @@
             android:exported="true"
             android:label="@string/cupcake_app_name"
         >
+        </activity>
+
+        <activity
+            android:name=".marsphotos.MainActivity"
+            android:exported="true"
+            android:label="@string/cupcake_app_name"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
