--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gamesofni.kotlinTutorials">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -58,7 +60,7 @@
         <activity
             android:name=".marsphotos.MainActivity"
             android:exported="true"
-            android:label="@string/cupcake_app_name"
+            android:label="@string/mars_app_name"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
