--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,13 @@ dependencies {
     // Coil
     implementation "io.coil-kt:coil:1.1.1"
 
+    // Room
+    def room_version = '2.3.0'
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
