--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,12 +62,18 @@
             android:exported="true"
             android:label="@string/mars_app_name"
             >
+        </activity>
+
+        <activity
+            android:name=".sqlbasics.MainActivity"
+            android:exported="true"
+            android:label="@string/sqlbasics_app_name"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
     </application>
 
