--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".busschedule.BusScheduleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinTutorials" >
+
+        <activity
+            android:name=".busschedule.MainActivity"
+            android:exported="true"
+            android:label="@string/busschedule_app_name"
+            >
+        </activity>
 
         <activity
             android:name=".HappyBirthActivity"
